[package]
name = "thingvellir"
version = "0.0.2-alpha3"
authors = ["jake <jh@discordapp.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/discordapp/thingvellir"
homepage = "https://github.com/discordapp/thingvellir"
documentation = "https://docs.rs/thingvellir"
description = "a concurrent, shared-nothing abstraction that manages an assembly of things"

[features]
# default = ["cassandra", "cbor", "json", "fdb"]
default = []
cassandra = ["cassandra-cpp"]
cbor = ["serde_cbor", "serde"]
json = ["serde_json", "serde"]
fdb = ["foundationdb"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
fxhash = "0.2"
futures = "0.3"
smallvec = "1.2"
indexmap = { version = "1.4.0", package = "discord-indexmap" }
num_cpus = "1.0"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
thiserror = "1.0"
dynamic-pool = "0.2"
cassandra-cpp = { version = "0.15.2-rc0", package = "discord-cassandra-cpp", optional = true }
foundationdb = { version = "0.5.0", optional = true }
# foundationdb = { version = "0.5.0", optional = false }
serde_cbor = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.2"

[[example]]
name = "cassandra"
required-features = ["cassandra"]

[[example]]
name = "foundationdb"
required-features = ["fdb", "cbor"]
